# ty

./: .gitignore  README.md
backend/: Cargo.toml
backend/migrations/2023-02-15-175003_users/: up.sql
backend/migrations/2023-02-15-175546_sessions/: up.sql
backend/migrations/2023-02-15-220300_video/: down.sql  up.sql
backend/migrations/2023-02-15-220553_comments/: up.sql
backend/migrations/2023-02-15-220920_views/: up.sql
backend/src/: main.rs  schema.rs
backend/src/controllers/: mod.rs
backend/src/controllers/auth/: login_user.rs  mod.rs  session_user.rs
backend/src/controllers/user_controllers/: create_user.rs  get_all_users.rs  get_user.rs  mod.rs
backend/src/controllers/video_controllers/: create_video.rs  delete_video.rs  get_all_videos.rs  get_video.rs  mod.rs  serve_video.rs
backend/src/lib_db/: db_connection.rs  mod.rs
backend/src/models/: comment.rs  mod.rs  sessions.rs  user.rs  video.rs
backend/src/traits/: db.rs  get_db.rs  mod.rs
backend/src/traits/auth/: auth.rs
backend/src/video_uploading/: mod.rs  video_upload_socket.rs
client/: package-lock.json  package.json  tailwind.config.cjs
client/src/: app.rs  main.rs  root.css  root.tsx
client/src/authentication/: auth.ts
client/src/components/: Comments.tsx  Dropdown.tsx  Recomended.tsx  SideBar.tsx  header.rs
client/src/icons/: HomeIcon.tsx
client/src/routes/: create_video.tsx  index.tsx  login.tsx  register.tsx
client/src/routes/video/: [id].tsx
client/src/types/: Dropdown.ts  IconSettings.ts  Video.ts
client/style/: main.scss
