[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
diesel = { version = "2.0.0", features = ["postgres"] }
chrono = "0.4.23"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bcrypt = "0.14"
