[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
chrono = { version="0.4.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bcrypt = "0.14"

#actix 
actix-web-actors = "4.2.0"
actix-web = "4"
actix = "0.13.0"
