[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
chrono = { version="0.4.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bcrypt = "0.14"

#actix 
actix-web-actors = "4.2.0"
actix-web = "4"
actix = "0.13.0"
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
actix-cors = "0.6.4"
actix-files = "0.6.2"

#uuid
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
